# synthcausalgen

./: .gitignore  README.md  pyproject.toml
.github/workflows/: codecov.yml
examples/: emd_1_100.py  generate_large_dataset.py  generate_random_datasets.py  generate_small_datasets.py
synthcausalgen/: __init__.py  synthdatagen.py
synthcausalgen/core/: __init__.py  random_dag_generator.py
synthcausalgen/core/node_models/: __init__.py  leaf_models.py  root_models.py
tests/: test_generator.py
