[tool.poetry]
name = "synthcausalgen"
version = "0.1.0"
description = ""
authors = ["jkaminski <jkaminski@niuitmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
scipy = "^1.7"
networkx = "^2.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.12"
codecov = "^2.1"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
