[tool.poetry]
name = "synthcausalgen"
version = "0.1.0"
description = ""
authors = ["jkaminski <jkaminski@niuitmo.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.1"
scikit-learn = "^1.5.0"
networkx = "^3.3"

[tool.poetry.extras]
torch = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
